--- a/index.html
+++ b/index.html
@@ -20,5 +20,36 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <!-- Navbar -->
+    <div class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
+      <div class="container">
+        <a href="#" class="navbar-brand">FrontEnd Bootcamp</a>
+
+        <button
+          class="navbar-toggler"
+          data-bs-toggle="collapse"
+          data-bs-target="#navmenu"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navmenu">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="#learn" class="nav-link">What You'll learn</a>
+            </li>
+
+            <li class="nav-item">
+              <a href="#questions" class="nav-link">questions</a>
+            </li>
+
+            <li class="nav-item">
+              <a href="#Instructors" class="nav-link">Instructors</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
