--- a/index.html
+++ b/index.html
@@ -51,5 +51,38 @@
         </div>
       </div>
     </div>
+
+    <!-- Showcase -->
+    <section class="bg-dark text-light p-3 p-lg-0 pt-lg-5 text-center">
+      <div class="container pt-3">
+        <div
+          class="d-sm-flex text-sm-start align-items-center justify-content-between"
+        >
+          <div class="col-sm-6">
+            <h1>
+              Become a
+              <span class="text-warning">Web Developer</span>
+            </h1>
+            <p class="lead my-4">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+              laborum eaque eligendi vitae reprehenderit. Ullam, ut. Veritatis
+              iusto autem similique.
+            </p>
+            <button
+              class="btn btn-primary btn-lg mb-3 mb-sm-0"
+              data-bs-toggle="modal"
+              data-bs-target="#enroll"
+            >
+              Let's Sign Up
+            </button>
+          </div>
+          <img
+            class="img-fluid w-50 d-none d-sm-block"
+            src="../img/showcase.svg"
+            alt=""
+          />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
