Add newsletter section

--- a/index.html
+++ b/index.html
@@ -84,5 +84,20 @@
         </div>
       </div>
     </section>
+
+    <!-- NewsLetter -->
+    <section class="bg-primary text-light p-5">
+      <div class="container">
+        <div class="d-md-flex justify-content-between align-itemts-center">
+          <h3 class="mb-3 mb-md-0 text-center mb-4 mb-md-0">
+            Sign Up Our Newsletter
+          </h3>
+          <div class="input-costom input-group mb-3 mt-5 mt-sm-0">
+            <input type="text" class="form-control" placeholder="Enter Email" />
+            <button class="btn btn-dark btn-lg" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
