--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bootstrap Library</title>
+    <title>Bootstrap Website</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,7 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css"
       rel="stylesheet"
@@ -56,7 +57,7 @@
     <section class="bg-dark text-light p-3 p-lg-0 pt-lg-5 text-center">
       <div class="container pt-3">
         <div
-          class="d-sm-flex text-sm-start align-items-center justify-content-between"
+          class="d-sm-flex text-sm-start align-items-center py-5 justify-content-between"
         >
           <div class="col-sm-6">
             <h1>
@@ -88,10 +89,12 @@
     <!-- NewsLetter -->
     <section class="bg-primary text-light p-5">
       <div class="container">
-        <div class="d-md-flex justify-content-between align-itemts-center">
-          <h3 class="mb-3 mb-md-0 text-center mb-4 mb-md-0">
-            Sign Up Our Newsletter
-          </h3>
+        <div class="d-md-flex justify-content-between align-itemts-end">
+          <div class="col-6">
+            <h3 class="mb-3 mb-md-0 text-center mb-4 mb-md-0">
+              Sign Up Our Newsletter
+            </h3>
+          </div>
           <div class="input-costom input-group mb-3 mt-5 mt-sm-0">
             <input type="text" class="form-control" placeholder="Enter Email" />
             <button class="btn btn-dark btn-lg" type="button">Sign Up</button>
