--- a/index.html
+++ b/index.html
@@ -102,5 +102,63 @@
         </div>
       </div>
     </section>
+
+    <!-- Boxes -->
+
+    <section class="p-5">
+      <div class="container">
+        <div class="row text-center gy-4">
+          <div class="col-md text-center">
+            <div class="card bg-dark text-light">
+              <div class="card-body">
+                <div class="h1">
+                  <i class="bi bi-laptop"></i>
+                </div>
+                <h3 class="card-title mb-3">Virsual</h3>
+                <p class="card-text mb-3">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Laborum nobis corrupti, sit eum consectetur numquam.
+                </p>
+                <a href="#" class="btn btn-primary text-light mb-2 mb-sm0"
+                  >Read More</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md text-center">
+            <div class="card-body bg-secondary text-light">
+              <div class="h1">
+                <i class="bi bi-person-square"></i>
+              </div>
+              <h3 class="card-title mb-3">Hybrid</h3>
+              <p class="card-text mb-3">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                nobis corrupti, sit eum consectetur numquam.
+              </p>
+              <a href="#" class="btn btn-dark text-light mb-2 mb-sm0"
+                >Read More</a
+              >
+            </div>
+          </div>
+
+          <div class="col-md text-center">
+            <div class="card-body bg-dark text-light">
+              <div class="h1">
+                <i class="bi bi-people"></i>
+              </div>
+              <h3 class="card-title mb-3">In Person</h3>
+              <p class="card-text mb-3">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                nobis corrupti, sit eum consectetur numquam.
+              </p>
+              <a href="#" class="btn btn-primary text-light mb-2 mb-sm0"
+                >Read More</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
