Add learn section

--- a/index.html
+++ b/index.html
@@ -160,5 +160,30 @@
         </div>
       </div>
     </section>
+
+    <!-- Learn Sections -->
+    <section class="p-5" id="learn">
+      <div class="container">
+        <div class="row py-5 align-items-center justify-content-center">
+          <div class="col-md">
+            <img src="assets/fundamentals.svg" class="img-fluid" alt="" />
+          </div>
+          <div class="col-md p-5">
+            <h2>Learn The Fundementals</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque,
+              ex.
+            </p>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Molestiae, dolor omnis! Impedit dolorem nostrum saepe.
+            </p>
+            <a href="#" class="btn">
+              <i class="bi bi-chevron-right"></i> Read More
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
