--- a/index.html
+++ b/index.html
@@ -185,5 +185,29 @@
         </div>
       </div>
     </section>
+
+    <section class="p-5 bg-dark text-light" id="learn">
+      <div class="container">
+        <div class="row align-items-center justify-content-center">
+          <div class="col-md p-5">
+            <h2>Learn The React</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque,
+              ex.
+            </p>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Molestiae, dolor omnis! Impedit dolorem nostrum saepe.
+            </p>
+            <a href="#" class="btn btn-light">
+              <i class="bi bi-chevron-right"></i> Read More
+            </a>
+          </div>
+          <div class="col-md">
+            <img src="../img/react.svg" class="img-fluid" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
