--- a/index.html
+++ b/index.html
@@ -289,6 +289,35 @@
           </div>    
       </div>
   </section>  
+
+  <!-- Instructors -->
+
+  <section id="Instructors" class="p-5 bg-primary">
+    <div class="container">
+        <h2 class="text-center text-light">Our Instructors</h2>
+        <p class="text-center lead text-light mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, maiores.</p>
+
+        <div class="row g-4">
+            <!-- item 1 -->
+            <div class="col-md-6 col-lg-3">
+                <div class="card bg-light">
+                    <div class="card-body text-center">
+                        <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3" alt="">
+                        <h3 class="card-title mb-3">Jogn Doe</h3>
+                        <p class="card-text mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id laboriosam harum quae autem rem. Doloribus.</p>
+                        <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                        <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                        <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            
+        </div>
+    </div>
+</section>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
   </body>
