--- a/index.html
+++ b/index.html
@@ -313,7 +313,50 @@
                 </div>
             </div>
 
-            
+            <!-- item 2 -->
+            <div class="col-md-6 col-lg-3">
+                <div class="card bg-light">
+                    <div class="card-body text-center">
+                        <img src="https://randomuser.me/api/portraits/women/11.jpg" class="rounded-circle mb-3" alt="">
+                        <h3 class="card-title mb-3">jane Doe</h3>
+                        <p class="card-text mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id laboriosam harum quae autem rem. Doloribus.</p>
+                        <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                        <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                        <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- item 3 -->
+            <div class="col-md-6 col-lg-3">
+                <div class="card bg-light">
+                    <div class="card-body text-center">
+                        <img src="https://randomuser.me/api/portraits/men/14.jpg" class="rounded-circle mb-3" alt="">
+                        <h3 class="card-title mb-3">jack Doe</h3>
+                        <p class="card-text mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id laboriosam harum quae autem rem. Doloribus.</p>
+                        <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                        <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                        <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- item four -->
+            <div class="col-md-6 col-lg-3">
+                <div class="card bg-light">
+                    <div class="card-body text-center">
+                        <img src="https://randomuser.me/api/portraits/women/12.jpg" class="rounded-circle mb-3" alt="">
+                        <h3 class="card-title mb-3">Sara Smith</h3>
+                        <p class="card-text mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id laboriosam harum quae autem rem. Doloribus.</p>
+                        <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                        <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                        <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
