Add contact and map section

--- a/index.html
+++ b/index.html
@@ -361,6 +361,43 @@
     </div>
 </section>
 
+<!-- contact & map -->
+<section class="p-5">
+  <div class="container">
+      <div class="row g-4 align-items-center">
+          <div class="col-md">
+              <h1 class="text-center mb-5">
+                  Contact Info
+              </h1>
+
+              <ul class="list-group  list-group-flush lead">
+                  <li class="list-group-item">
+                      <span class="fw-bold">Main Location</span> 50 Main street Bostan Math
+                  </li>
+
+                  <li class="list-group-item">
+                      <span class="fw-bold">Enrollment Phone</span> (555) 555-5555
+                  </li>
+
+                  <li class="list-group-item">
+                      <span class="fw-bold">Student Phone</span> (21) 21-56863887
+                  </li>
+                  <li class="list-group-item">
+                      <span class="fw-bold">Enrollment Email</span> ExampleEmail@gmail.com
+                  </li>
+                  <li class="list-group-item">
+                      <span class="fw-bold">Student Email</span> Studentemail@gmail.com
+                  </li>
+              </ul>
+          </div>
+
+          <div class="col-md">
+              <img src="assets/contact us.png" class="img-fluid d-none d-sm-block" alt="">
+          </div>
+      </div>
+  </div>
+</section>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
   </body>
