--- a/index.html
+++ b/index.html
@@ -398,6 +398,72 @@
   </div>
 </section>
 
+<!-- Footer -->
+
+<footer class="p-4 bg-dark text-light text-center ">
+  <div class="container  position-relative ">
+      <p class="lead">Copyright &copy; 2022</p>
+      <a href="#" class="position-absolute bottom-0 end-0 "><i class="bi bi-arrow-up-circle h1"></i></a>
+  </div>
+</footer>
+
+<!-- Modal -->
+<div class="modal fade" id="enroll" tabindex="-1" aria-labelledby="enrollLabel" aria-hidden="true">
+  <div class="modal-dialog">
+  <div class="modal-content">
+      <div class="modal-header ">
+      <h5 class="modal-title fw-bold" id="enrollLabel">Sign Up</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+
+
+          <form>
+              <!-- item 1 -->
+
+              <div class="mb-3">
+                  <label for="first-name" class="col-form-label">
+                      First Name:
+                  </label>
+                  <input type="text" class="form-control" id="first-name" >
+              </div>
+
+              <!-- item 2 -->
+              <div class="mb-3">
+                  <label for="last-name" class="col-form-label">
+                      Last Name:
+                  </label>
+                  <input type="text" class="form-control" id="last-name" >
+              </div>
+
+              <!-- item 3 -->
+              <div class="mb-3">
+                  <label for="Eamil" class="col-form-label">
+                      Eamil:
+                  </label>
+                  <input type="text" class="form-control" id="Email" >
+              </div>
+
+              <!-- item 4 -->
+              <div class="mb-3">
+                  <label for="Password" class="col-form-label">
+                      Create a Password:
+                  </label>
+                  <input type="password" class="form-control" id="password" >
+              </div>
+          </form>
+
+      </div>
+      <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      <button type="button" class="btn btn-primary">Sign Up</button>
+      </div>
+  </div>
+  </div>
+</div>
+
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
   </body>
